article alignment fix

--- a/src/css/modules/_article.scss
+++ b/src/css/modules/_article.scss
@@ -77,6 +77,7 @@
 			width:50%;
 			float:left;
 			padding:0 10px 0 0;
+			min-height:277px;
 			&:nth-of-type(2n+2){
 				padding:0 0 0 10px;
 			}
@@ -98,7 +99,14 @@
 			line-height:1.2em;
 		}
 	}
-	@media(min-width:740px){
-
+	@media(min-width:980px){
+		.articleContainer{
+			min-height:310px;
+		}
+	}
+	@media(min-width:1300px){
+		.articleContainer{
+			min-height:330px;
+		}
 	}
 }
